--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "build": "tsc -d -p tsconfig.json",
     "test": "jest",
+    "lint": "eslint . --ext .ts",
     "typecheck": "tsc -p tsconfig.json",
     "format": "prettier --write ."
   },
@@ -25,14 +26,14 @@
     "@types/eslint": "^8.2.1",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.13",
-    "@typescript-eslint/typescript-estree": "^5.7.0",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/experimental-utils": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.4.1",
+    "@typescript-eslint/parser": "^5.21.0",
+    "@typescript-eslint/typescript-estree": "^5.7.0",
+    "eslint": "^8.14.0",
     "jest": "^27.4.5",
     "prettier": "2.5.1",
     "ts-jest": "^27.1.1",
     "typescript": "^4.5.4"
-  },
-  "dependencies": {}
+  }
 }
