fix(package.json): correct typo in package name from 'eslint-plugin-o1jx' to 'eslint-plugin-o1js' for accurate naming

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "eslint-plugin-o1jx",
+  "name": "eslint-plugin-o1js",
   "version": "0.4.0",
   "description": "o1js rules for ESLint",
   "main": "build/src/index.js",
